--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@
 
 # Admin User Configuration
 ADMIN_USERNAME=webadmin
-ADMIN_EMAIL=sam@mustardtreegroup.com
-ADMIN_PASSWORD_HASH=your-bcrypt-hashed-password-here
+ADMIN_EMAIL=admin@mustardtreepartners.com
+ADMIN_PASSWORD_HASH=$2b$12$hplVNyrqTqM1v.z7tvU7w.0OX7r4bSz24Q8FUcGZDUMboTlcmpfs6
 
 # Application Environment
 NODE_ENV=production
