--- a/.env
+++ b/.env
@@ -8,5 +8,6 @@ CLOUDFLARE_ACCESS_AUD=2ab81f6bcbd116922eb63640376f7c539fc5d773b453d019edd8360fb3
 ADMIN_EMAILS=samuel@lgger.com
 ADMIN_DOMAINS=lgger.com
 
-# Production
-NODE_ENV=production
+# Development mode for testing
+NODE_ENV=development
+DEV_MOCK_AUTH=false
