feat: Complete customer document portal with Cloudflare R2 integration
- Add comprehensive document management system with role-based access
- Implement CustomerPortal.tsx and AdminDocumentManagement.tsx components
- Create documentService.ts with R2 storage integration and version control
- Add TypeScript interfaces in types/documents.ts for type safety
- Enhance cloudflareAuthService.ts with customer/staff/admin roles
- Update React 18 compatibility (createRoot API) and React Router future flags
- Add environment variable support with vite-env.d.ts
- Create comprehensive deployment documentation and setup guides
- Configure Cloudflare Pages deployment with R2 API credentials
- Add CORS configuration for browser-based file uploads
- Implement audit logging and document versioning features
- Update routing with protected admin and customer portal routes

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "generate-credentials": "node scripts/generate-credentials.js",
     "generate-credentials:help": "node scripts/generate-credentials.js --help",
     "migrate-auth": "node scripts/migrate-auth.js",
-    "migrate-auth:help": "node scripts/migrate-auth.js --help"
+    "migrate-auth:help": "node scripts/migrate-auth.js --help",
+    "setup-r2": "wrangler r2 bucket create mustardtree-documents && wrangler r2 bucket cors set mustardtree-documents --file cors.json",
+    "deploy": "npm run build && wrangler pages deploy dist --project-name=mustardtree-web",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -39,6 +42,6 @@
     "postcss": "latest",
     "tailwindcss": "3.4.17",
     "typescript": "^5.5.4",
-    "vite": "^5.2.0"
+    "vite": "^7.2.0"
   }
 }
